# McOsu-ng

./: .clang-format  .clangd-default  .gitattributes  .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac
.github/workflows/: linux-multiarch.yml  linux-x32.yml  linux-x64.yml  win-multiarch.yml  win-x32.yml  win-x64.yml
.github/workflows/docker/: Dockerfile  build.sh
assets/cfg/: override.cfg
assets/materials/default/: applause.flac  check-off.flac  drum-hitclap.flac  drum-hitnormal.flac  drum-slidertick.flac  menuclick.flac  menuhit.flac  normal-hitclap.flac  normal-hitclap2.flac  normal-hitfinish.flac  normal-hitnormal.flac  normal-hitwhistle.flac  normal-slidertick.flac  soft-hitnormal.flac  soft-slidertick.flac  spinnerbonus.flac  spinnerspin.flac
assets/shaders/: cursortrail.mcshader  slider.mcshader
build-aux/misc/: freetype-win.patch  libbz2-Makefile-mingw  sdl-c23bool.patch  soloud-add-sdl3-static-option.patch  soloud-bump-dr_libs.patch  soloud-fastseek.patch  soloud-fix-global-volume-data-race.patch  soloud-miniaudio-more-config.patch  soloud-miniaudio-pulse-latency.patch  soloud-miniaudio-recover.patch  soloud-miniaudio-settings.patch  soloud-mpg123.patch  soloud-prefer-ffmpeg-option.patch  soloud-rework-resampler.patch  soloud-use-cpp17-threads.patch
libraries/: FastDelegate.h  MD5.h  update-bass.sh
libraries/bass/include/: bass.h
libraries/bassasio/include/: bassasio.h
libraries/bassfx/include/: bass_fx.h
libraries/bassmix/include/: bassmix.h
libraries/delegates/: Delegate.h
libraries/glad/: glad.h
libraries/glad/glad/: glad.cpp
src/: Makefile.sources  config.h.in
src/App/: App.h
src/App/Osu/: Osu.cpp  Osu.h  Osu2.cpp  Osu2.h  OsuBackgroundImageHandler.cpp  OsuBackgroundImageHandler.h  OsuBackgroundStarCacheLoader.cpp  OsuBackgroundStarCacheLoader.h  OsuBeatmap.cpp  OsuBeatmap.h  OsuBeatmapExample.cpp  OsuBeatmapExample.h  OsuBeatmapMania.cpp  OsuBeatmapMania.h  OsuBeatmapStandard.cpp  OsuBeatmapStandard.h  OsuChangelog.cpp  OsuChangelog.h  OsuCircle.cpp  OsuCircle.h  OsuConVarDefs.h  OsuDatabase.cpp  OsuDatabase.h  OsuDatabaseBeatmap.cpp  OsuDatabaseBeatmap.h  OsuDifficultyCalculator.cpp  OsuDifficultyCalculator.h  OsuEditor.cpp  OsuEditor.h  OsuFile.cpp  OsuFile.h  OsuGameRules.cpp  OsuGameRules.h  OsuGameRulesMania.cpp  OsuGameRulesMania.h  OsuHUD.cpp  OsuHUD.h  OsuHitObject.cpp  OsuHitObject.h  OsuIcons.cpp  (+107 more)
src/Engine/: AnimationHandler.cpp  AnimationHandler.h  BaseEnvironment.h  ByteBufferedFile.cpp  ByteBufferedFile.h  Camera.cpp  Camera.h  ConVar.cpp  ConVar.h  ConVarDefs.h  ContextMenu.h  DiscordInterface.cpp  DiscordInterface.h  Engine.cpp  Engine.h  Environment.cpp  Environment.h  FPSLimiter.cpp  FPSLimiter.h  File.cpp  File.h  Font.cpp  Font.h  FontTypeMap.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  InputDevice.h  NetworkHandler.cpp  NetworkHandler.h  OpenCLInterface.cpp  OpenCLInterface.h  OpenVRInterface.cpp  OpenVRInterface.h  Profiler.cpp  Profiler.h  RenderTarget.cpp  RenderTarget.h  Resource.cpp  (+22 more)
src/Engine/Input/: Cursors.h  Gamepad.h  GamepadButtons.h  GamepadEvent.h  GamepadListener.h  InputDevice.h  Keyboard.cpp  Keyboard.h  KeyboardEvent.h  KeyboardKeys.h  KeyboardListener.h  Mouse.cpp  Mouse.h  MouseListener.h  OpenVRController.h
src/Engine/Main/: BaseEnvironment.h  EngineFeatures.h  SDLMain.cpp  SDLMain.h  main.cpp  main_Linux.cpp  main_OSX_cpp.cpp  main_OSX_cpp.h  main_OSX_sdl.cpp  main_SDL.cpp  main_Windows.cpp
src/Engine/Platform/: BassLoader.cpp  BassLoader.h  BassSound.cpp  BassSound.h  BassSoundEngine.cpp  BassSoundEngine.h  File.cpp  GenericSDLGLES2Interface.cpp  GenericSDLGLES2Interface.h  GenericSDLGLESInterface.cpp  GenericSDLGLESInterface.h  HorizonSDLEnvironment.cpp  HorizonSDLEnvironment.h  HorizonThread.h  HorizonTimer.cpp  HorizonTimer.h  KeyboardKeys.h  LinuxContextMenu.h  LinuxEnvironment.cpp  LinuxEnvironment.h  LinuxGLLegacyInterface.cpp  LinuxGLLegacyInterface.h  LinuxSDLEnvironment.cpp  LinuxSDLEnvironment.h  LinuxTimer.cpp  LinuxTimer.h  MacOSEnvironment.cpp  MacOSEnvironment.h  MacOSGLLegacyInterface.cpp  MacOSGLLegacyInterface.h  MacOSSDLEnvironment.cpp  MacOSSDLEnvironment.h  MacOSTimer.cpp  MacOSTimer.h  NullContextMenu.h  NullEnvironment.cpp  NullEnvironment.h  OpenGLHeaders.h  SDLEnvironment.cpp  SDLEnvironment.h  (+45 more)
src/Engine/Renderer/: DirectX11Image.cpp  DirectX11Image.h  DirectX11Interface.cpp  DirectX11Interface.h  DirectX11RenderTarget.cpp  DirectX11RenderTarget.h  DirectX11Shader.cpp  DirectX11Shader.h  DirectX11VertexArrayObject.cpp  DirectX11VertexArrayObject.h  Graphics.cpp  Graphics.h  NullGraphicsInterface.h  NullImage.h  NullRenderTarget.h  NullShader.h  OpenGL3Interface.cpp  OpenGL3Interface.h  OpenGL3VertexArrayObject.cpp  OpenGL3VertexArrayObject.h  OpenGLES2Interface.cpp  OpenGLES2Interface.h  OpenGLES2Shader.cpp  OpenGLES2Shader.h  OpenGLES2VertexArrayObject.cpp  OpenGLES32Interface.cpp  (+36 more)
src/GUI/: CBaseUI.h  CBaseUIBoxShadow.cpp  CBaseUIBoxShadow.h  CBaseUIButton.cpp  CBaseUIButton.h  CBaseUICanvas.cpp  CBaseUICanvas.h  CBaseUICheckbox.cpp  CBaseUICheckbox.h  CBaseUIContainer.cpp  CBaseUIContainer.h  CBaseUIContainerBase.cpp  CBaseUIContainerBase.h  CBaseUIContainerBox.cpp  CBaseUIContainerBox.h  CBaseUIContainerHorizontalBox.cpp  CBaseUIContainerHorizontalBox.h  CBaseUIContainerVerticalBox.cpp  CBaseUIContainerVerticalBox.h  CBaseUIElement.cpp  CBaseUIElement.h  CBaseUIImage.cpp  CBaseUIImage.h  CBaseUIImageButton.cpp  CBaseUIImageButton.h  CBaseUILabel.cpp  CBaseUILabel.h  CBaseUIScrollView.cpp  CBaseUIScrollView.h  CBaseUISlider.cpp  CBaseUISlider.h  CBaseUITextField.cpp  CBaseUITextField.h  CBaseUITextbox.cpp  CBaseUITextbox.h  CBaseUIWindow.cpp  CBaseUIWindow.h  CWindowManager.cpp  CWindowManager.h  GaussianBlurKernel.cpp  (+1 more)
src/Main/: BaseEnvironment.h  EngineFeatures.h  WinDebloatDefs.h  main.cpp
src/Util/: Color.h  FastDelegate.h  MD5.h  MakeDelegateWrapper.h  Matrices.h  McMath.cpp  McMath.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  UString.cpp  UString.h  Vectors.h  cbase.h  lodepng.cpp  lodepng.h
(+92 files in other folders)
